# niri-float

./: Cargo.toml  README.md  rules.example.toml
src/: config.rs  main.rs  rules.rs
