[package]
name = "niri-float"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dirs = "6.0.0"
env_logger = { version = "0.11.7", default-features = false, features = ["auto-color", "color"]}
log = "0.4.26"
niri-ipc = "=25.2.0"
regex-lite = "0.1.6"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
